--- a/components/footer.html
+++ b/components/footer.html
@@ -6,11 +6,14 @@
         <title>Tailwind</title>
         <script src='https://cdn.tailwindcss.com'></script>
     </head>
-    <body class="bg-zinc-950">
+    <body class="bg-zinc-900">
         <footer class="text-white w-full p-4">
             <div class="max-w-7xl mx-auto border p-6 border-zinc-700 bg-zinc-800 rounded md:flex block justify-between">
                 <div>
-                    <h4 class="text-3xl font-medium">ThreatScope</h4>
+                    <div class="flex items-center space-x-4">
+                        <img src="../assets/logo.png" class="h-10 w-10" alt="Logo" />
+                        <h4 class="text-3xl font-medium text-indigo-400">ThreatScope</h4>
+                    </div>
                     <p class="text-gray-400 text-sm mt-2">© 2024 | All rights reserved.</p>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4 md:mt-0 mt-8">
