--- a/components/navigation.html
+++ b/components/navigation.html
@@ -6,11 +6,11 @@
         <title>Tailwind</title>
         <script src='https://cdn.tailwindcss.com'></script>
     </head>
-    <body class="text-white bg-slate-950">
-        <nav class="w-full bg-slate-800 shadow p-4 flex items-center justify-between">
+    <body class="text-white bg-zinc-900">
+        <nav class="w-full bg-zinc-800 shadow p-4 flex items-center justify-between">
             <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
                 <div class="flex items-center space-x-4">
-                    <img src="../assets/logo.png" class="w-14 h-14">
+                    <img src="../assets/logo.svg" class="w-14 h-14">
                     <h4 class="text-2xl">ThreatScope</h4>
                 </div>
                 <button class="md:hidden block">
