--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,7 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 .text-roboto {
     font-family: "Roboto", sans-serif;
     font-optical-sizing: auto;
+}
+
+.text-monospace {
+    font-family: "IBM Plex Mono", monospace;
+    font-style: normal;
 }
