--- a/components/template.html
+++ b/components/template.html
@@ -4,31 +4,56 @@
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<title>Tailwind</title>
-		<script src='https://cdn.tailwindcss.com'></script>
-		<link rel="stylesheet" href="assets/css/fonts.css">
+		<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
 	<body class="text-white text-roboto">
 		<!-- NAVIGATION -->
 		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/hero-bg.jpg')] bg-cover bg-center bg-no-repeat relative">
-            <nav class="w-full p-4 flex items-center justify-between">
-                <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
-                    <div class="flex items-center space-x-4">
-                        <img src="../assets/logo.svg" class="w-14 h-14">
-                        <h4 class="text-2xl">ThreatScope</h4>
+            <nav class="absolute inset-0 z-10">
+                <div class="w-full p-4 flex items-center justify-between">
+                    <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
+                        <div class="flex items-center space-x-4">
+                            <img src="../assets/logo.svg" class="w-14 h-14">
+                            <h4 class="text-2xl">ThreatScope</h4>
+                        </div>
                     </div>
-                    <button class="md:hidden block">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-                        </svg>                  
-                    </button>
+                    <ul class="md:flex items-center space-x-4">
+                        <li>
+                            <a href="#" class="hidden md:block">Home</a>
+                        </li>
+                        <li>
+                            <a href="#" class="hidden md:block">Recent News</a>
+                        </li>
+                        <li>
+                            <a href="#" class="hidden md:block">Learn Now</a>
+                        </li>
+                        <li>
+                            <button class="cursor-pointer p-2 rounded" id="menu-toggle">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                                </svg>                  
+                            </button>
+                        </li>
+                    </ul>
                 </div>
-    
-                <ul class="text-xl md:flex hidden items-center space-x-8 ">
-                    <li>Home</li>
-                    <li>Recent News</li>
-                    <li>Learn Now</li>
-                    <li><i class="fa-solid fa-bars"></i></li>
-                </ul>
+                <div id="sidebar" class="fixed inset-y-0 left-0 w-64 bg-zinc-950 text-white transform -translate-x-full transition-transform duration-300">
+                    <ul class="p-4 space-y-6 text-left">
+                        <li>
+                            <ul class="space-y-4">
+                                <li class="text-xl font-medium">Navigations</li>
+                                <li>
+                                    <ul class="space-y-3">
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 rounded">Home</li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 rounded">Recent News</li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 rounded">Learn Now</li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                        
+                    </ul>
+                </div>
             </nav>
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent to-black"></div>
@@ -38,8 +63,10 @@
 			</div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-zinc-900">
-			<div class="max-w-7xl border mx-auto p-4">
-                <h4>PUT YOUR DESIGN HERE</h4>
+			<div class="max-w-7xl mx-auto p-4 py-32 space-y-4">
+                <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente reiciendis accusamus minima.</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae quos aperiam dolores odio facilis sint dignissimos deserunt dicta, perferendis consequuntur debitis natus earum amet distinctio architecto reiciendis veritatis at! Accusantium commodi facere explicabo odit quidem fuga, illum esse voluptatibus aliquam doloribus. Velit autem necessitatibus temporibus repellat aspernatur dolor natus, ullam libero dignissimos, vel voluptas ut, expedita assumenda debitis molestias illum consequuntur. Magnam officia culpa rerum sint sit obcaecati tempora unde consequatur eligendi quibusdam quis tenetur quasi aspernatur quos minus a soluta, quisquam alias ab cum beatae! Tempore eos officiis soluta nulla iure eligendi voluptas neque ad possimus maiores nihil a deserunt, nesciunt architecto modi esse quod voluptatum reprehenderit natus quas dolorem. Excepturi sequi architecto dolor beatae fugiat, quibusdam numquam cumque expedita explicabo harum placeat, eaque illo fuga dolorum debitis eum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor reprehenderit accusantium repellendus architecto rerum odio, temporibus minus dolorum voluptates? At eligendi, non consequuntur quam, ab mollitia et illo perferendis sit voluptatem iure in, dolorem laborum explicabo minus atque voluptas nulla earum deserunt fugiat suscipit quae eveniet eius soluta? Nostrum et illo eligendi voluptates molestiae dignissimos sapiente quis enim at repudiandae nam mollitia odit vero deleniti, distinctio corporis molestias, voluptatibus unde quaerat delectus, quod accusamus. Officiis consectetur harum in ut commodi alias cupiditate iure obcaecati? Amet, deserunt ex temporibus dolores voluptatum officiis. Obcaecati aut, quas odit sed, quam magni voluptatum sunt tempora at dolorum vel voluptates dignissimos eius officia architecto minus. Voluptate, eaque distinctio praesentium temporibus veritatis reprehenderit minima asperiores dolore quis ex. Commodi, laudantium aspernatur corrupti cupiditate consequatur velit placeat. Molestias perferendis corporis sint quas quis aut, sunt facere similique consequuntur assumenda quaerat accusamus reiciendis repudiandae dolorum doloremque saepe ipsum beatae tempora at odio tempore repellendus quidem nihil? Voluptate ullam dolor ducimus in enim?</p>
             </div>
 		</div>
 		
@@ -84,5 +111,6 @@
                 </div>
             </div>
         </footer>
+        <script src="../assets/js/main.js"></script>
 	</body>
 </html>
