style: redesign side nav items and spacing also added more sections to it

--- a/components/template.html
+++ b/components/template.html
@@ -37,21 +37,248 @@
                         </li>
                     </ul>
                 </div>
-                <div id="sidebar" class="fixed inset-y-0 left-0 w-64 bg-zinc-950 text-white transform -translate-x-full transition-transform duration-300">
-                    <ul class="p-4 space-y-6 text-left">
-                        <li>
-                            <ul class="space-y-4">
-                                <li class="text-xl font-medium">Navigations</li>
+                <div id="sidebar" class="fixed inset-y-0 overflow-y-auto left-0 w-64 bg-zinc-950 text-white transform -translate-x-full transition-transform duration-300 [&::-webkit-scrollbar]:w-1
+                [&::-webkit-scrollbar-track]:bg-gray-100
+                [&::-webkit-scrollbar-thumb]:bg-gray-300
+                dark:[&::-webkit-scrollbar-track]:bg-neutral-700
+                dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500 pb-10">
+                    <ul class="space-y-2 text-left">
+                        <li class="flex items-center space-x-4 p-4">
+                            <img src="../assets/logo.svg" class="w-14 h-14">
+                            <h4 class="text-2xl">ThreatScope</h4>
+                        </li>
+
+                        <li class="px-2">
+                            <ul class="space-y-2">
+                                <li class="text-xl font-medium px-2">Navigations</li>
                                 <li>
-                                    <ul class="space-y-3">
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 rounded">Home</li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 rounded">Recent News</li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 rounded">Learn Now</li>
+                                    <ul class="">
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Home</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Recent News</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Learn Now</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="px-2">
+                            <ul class="space-y-2">
+                                <li class="text-xl font-medium px-2">Concepts</li>
+                                <li>
+                                    <ul class="">
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 1</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 2</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 3</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="px-2">
+                            <ul class="space-y-2">
+                                <li class="text-xl font-medium px-2">Vulnerabilities</li>
+                                <li>
+                                    <ul class="">
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 1</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 2</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 3</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="px-2">
+                            <ul class="space-y-2">
+                                <li class="text-xl font-medium px-2">Famous Attacks</li>
+                                <li>
+                                    <ul class="">
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 1</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 2</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 3</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="px-2">
+                            <ul class="space-y-2">
+                                <li class="text-xl font-medium px-2">Recent Attacks</li>
+                                <li>
+                                    <ul class="">
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 1</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 2</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 3</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="px-2">
+                            <ul class="space-y-2">
+                                <li class="text-xl font-medium px-2">Companies Affected</li>
+                                <li>
+                                    <ul class="">
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 1</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 2</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 3</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="px-2">
+                            <ul class="space-y-2">
+                                <li class="text-xl font-medium px-2">Protective Measures</li>
+                                <li>
+                                    <ul class="">
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 1</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 2</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 3</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="px-2">
+                            <ul class="space-y-2">
+                                <li class="text-xl font-medium px-2">Future Threats</li>
+                                <li>
+                                    <ul class="">
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 1</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 2</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 3</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="px-2">
+                            <ul class="space-y-2">
+                                <li class="text-xl font-medium px-2">Gallery</li>
+                                <li>
+                                    <ul class="">
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 1</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 2</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 3</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="px-2">
+                            <ul class="space-y-2">
+                                <li class="text-xl font-medium px-2">About Us</li>
+                                <li>
+                                    <ul class="">
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 1</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 2</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 3</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="px-2">
+                            <ul class="space-y-2">
+                                <li class="text-xl font-medium px-2">Contact Us</li>
+                                <li>
+                                    <ul class="">
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 1</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 2</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 3</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="px-2">
+                            <ul class="space-y-2">
+                                <li class="text-xl font-medium px-2">Vulnerabilities</li>
+                                <li>
+                                    <ul class="">
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 1</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 2</a>
+                                        </li>
+                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                            <a href="#">Item 3</a>
+                                        </li>
                                     </ul>
                                 </li>
                             </ul>
                         </li>
                         
+                        
+                        
+
                     </ul>
                 </div>
             </nav>
