design: Moved the sidebar to the right and it is hidden by default

--- a/components/template.html
+++ b/components/template.html
@@ -37,7 +37,7 @@
                         </li>
                     </ul>
                 </div>
-                <div id="sidebar" class="fixed inset-y-0 overflow-y-auto left-0 w-64 bg-zinc-950 text-white transform -translate-x-full transition-transform duration-300 [&::-webkit-scrollbar]:w-1
+                <div id="sidebar" class="fixed inset-y-0 overflow-y-auto right-0 w-64 bg-zinc-950 text-white transform translate-x-full transition-transform duration-300 [&::-webkit-scrollbar]:w-1
                 [&::-webkit-scrollbar-track]:bg-gray-100
                 [&::-webkit-scrollbar-thumb]:bg-gray-300
                 dark:[&::-webkit-scrollbar-track]:bg-neutral-700
@@ -50,16 +50,16 @@
 
                         <li class="px-2">
                             <ul class="space-y-2">
-                                <li class="text-xl font-medium px-2">Navigations</li>
+                                <li class="text-lg font-medium px-2">Navigations</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Home</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Recent News</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Learn Now</a>
                                         </li>
                                     </ul>
@@ -69,16 +69,16 @@
 
                         <li class="px-2">
                             <ul class="space-y-2">
-                                <li class="text-xl font-medium px-2">Concepts</li>
+                                <li class="text-lg font-medium px-2">Concepts</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
@@ -88,16 +88,16 @@
 
                         <li class="px-2">
                             <ul class="space-y-2">
-                                <li class="text-xl font-medium px-2">Vulnerabilities</li>
+                                <li class="text-lg font-medium px-2">Vulnerabilities</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
@@ -107,16 +107,16 @@
 
                         <li class="px-2">
                             <ul class="space-y-2">
-                                <li class="text-xl font-medium px-2">Famous Attacks</li>
+                                <li class="text-lg font-medium px-2">Famous Attacks</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
@@ -126,16 +126,16 @@
 
                         <li class="px-2">
                             <ul class="space-y-2">
-                                <li class="text-xl font-medium px-2">Recent Attacks</li>
+                                <li class="text-lg font-medium px-2">Recent Attacks</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
@@ -145,16 +145,16 @@
 
                         <li class="px-2">
                             <ul class="space-y-2">
-                                <li class="text-xl font-medium px-2">Companies Affected</li>
+                                <li class="text-lg font-medium px-2">Companies Affected</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
@@ -164,16 +164,16 @@
 
                         <li class="px-2">
                             <ul class="space-y-2">
-                                <li class="text-xl font-medium px-2">Protective Measures</li>
+                                <li class="text-lg font-medium px-2">Protective Measures</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
@@ -183,16 +183,16 @@
 
                         <li class="px-2">
                             <ul class="space-y-2">
-                                <li class="text-xl font-medium px-2">Future Threats</li>
+                                <li class="text-lg font-medium px-2">Future Threats</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
@@ -202,16 +202,16 @@
 
                         <li class="px-2">
                             <ul class="space-y-2">
-                                <li class="text-xl font-medium px-2">Gallery</li>
+                                <li class="text-lg font-medium px-2">Gallery</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
@@ -221,16 +221,16 @@
 
                         <li class="px-2">
                             <ul class="space-y-2">
-                                <li class="text-xl font-medium px-2">About Us</li>
+                                <li class="text-lg font-medium px-2">About Us</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
@@ -240,16 +240,16 @@
 
                         <li class="px-2">
                             <ul class="space-y-2">
-                                <li class="text-xl font-medium px-2">Contact Us</li>
+                                <li class="text-lg font-medium px-2">Contact Us</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
@@ -259,16 +259,16 @@
 
                         <li class="px-2">
                             <ul class="space-y-2">
-                                <li class="text-xl font-medium px-2">Vulnerabilities</li>
+                                <li class="text-lg font-medium px-2">Vulnerabilities</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
