--- a/components/template-2.html
+++ b/components/template-2.html
@@ -6,7 +6,7 @@
         <title>Tailwind</title>
         <script src='https://cdn.tailwindcss.com'></script>
     </head>
-    <body class="text-white bg-zinc-900">
+    <body class="text-white bg-[#191A2E]">
         <nav class="">
             <div class="w-full p-4 flex items-center justify-between">
                 <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
@@ -275,15 +275,29 @@
                 </ul>
             </div>
         </nav>
-        <div class="p-4 mx-auto max-w-7xl grid md:grid-cols-2 grid-cols-1 gap-y-4 mt-8">
+        <div id="hero" class="p-4 mx-auto md:max-w-6xl max-w-5xl grid md:grid-cols-2 grid-cols-1 gap-y-4 mt-8">
             <div class="flex items-center justify-center">
-                <div class="block md:space-y-4 space-y-8">
+                <div class="md:space-y-4 space-y-8">
                     <h4 class="text-7xl font-medium">Future Cyber Threats</h4>
                     <p class="text-xl">Lorem ipsum dolor sit amet consectetur adipiscing elit. Consectetur adipiscing elit quisque faucibus ex sapien vitae. Ex sapien vitae pellentesque sem placerat in id. Placerat in id cursus mi pretium tellus duis. Pretium tellus duis convallis tempus leo eu aenean.</p>
+                    <a href="#" class="bg-indigo-600 px-2 py-1 rounded inline-block">Call to Action</a>
                 </div>
             </div>
             <div class="flex items-center justify-center">
-                <img src="../assets/future-cyber-threats.png" class="w-full">
+                <img src="../assets/future-cyber-threats.png">
+            </div>
+        </div>
+        <div class="my-14 w-full space-y-14">
+            <div class="max-w-5xl mx-auto px-2 grid grid-cols-3 gap-4">
+                <div class="border bg-indigo-900/20 border-indigo-800/20">
+                    <img src="https://placehold.co/250x250" class="w-full h-48 object-cover rounded-t">
+                    <div class="p-4 space-y-2">
+                        <h5 class="text-lg font-medium">AI in Hacking</h5>
+                        <p class="">Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amet consectetur adipiscing elit quisque faucibus ex.</p>
+                        <button class="px-2 py-1 rounded text-white bg-indigo-600 text-sm">Learn More</button>
+                    </div>
+                </div>
+                
             </div>
         </div>
         <script src="../assets/js/main.js"></script>
